# Jeffmind

./: .env.example  .gitignore  README.md  example4ds.py  example4ollama.py  example_eventbus.py  example_react.py  example_toolcall_trace.py  models.json  pyproject.toml  pytest.ini
agent/: eventbus.py  react.py
provider/: models.py  registry.py  types.py
provider/api/: base.py  openai_completions.py  transform_messages.py
provider/auth/: file_store.py  helpers.py  resolve.py  store.py  types.py
provider/providers/: all.py  deepseek.py  ollama.py  openai.py
tests/integration/: test_models_complete.py  test_openai_completions.py
tests/unit/: test_auth.py  test_build_params.py  test_compat.py  test_credential_store.py  test_file_store.py  test_models.py  test_normalize_tool_call_id.py  test_registry.py  test_resolve_auth.py  test_transform_messages.py  test_transform_messages_advanced.py
